ditch absolute positioning to avoid txt content overlap

--- a/main/src/scss/opintoni/_user-menu.scss
+++ b/main/src/scss/opintoni/_user-menu.scss
@@ -100,8 +100,8 @@ $time-color: rgb(109, 109, 109);
       }
 
       a {
-        position: absolute;
-        bottom: 1em;
+        margin-top: 0.1em;
+        display: inline-block;
       }
     }
   }
